--- a/assets/light.css
+++ b/assets/light.css
@@ -159,6 +159,7 @@ cell:hover>celloutput>div::-webkit-scrollbar-thumb {
     background: rgba(0, 0, 0, .15);
 }
 
+cell.error > celloutput > div > pre,
 cell.inline-output>celloutput>div>pre {
     margin: 0px;
     display: flex;
@@ -456,14 +457,14 @@ cell.running>trafficlight {
     background: repeating-linear-gradient( -45deg, hsla(20, 20%, 80%, 1), hsla(20, 20%, 80%, 1) 8px, hsla(20, 20%, 80%, .1) 8px, hsla(20, 20%, 80%, .1) 16px) !important;
     background-size: 4px 22.62741699797px;
     /* 16 * sqrt(2) */
-    animation: 2s linear 0s infinite running scrollbackground;
+    animation: 2000s linear 0s infinite running scrollbackground;
 }
 
 cell.running.error>trafficlight {
     background: repeating-linear-gradient( -45deg, hsl(0, 100%, 71%), hsl(0, 100%, 71%) 8px, hsla(12, 71%, 47%, 0.33) 8px, hsla(12, 71%, 47%, 0.33) 16px) !important;
     background-size: 4px 22.62741699797px;
     /* 16 * sqrt(2) */
-    animation: 2s linear 0s infinite running scrollbackground;
+    animation: 2000s linear 0s infinite running scrollbackground;
 }
 
 @keyframes scrollbackground {
@@ -471,7 +472,7 @@ cell.running.error>trafficlight {
         background-position-y: 0px;
     }
     100% {
-        background-position-y: 22.62741699797px;
+        background-position-y: 22627.41699797px;
         /* 16 * sqrt(2) */
     }
 }
@@ -542,19 +543,19 @@ Based on "Paraíso (Light)" by Jan T. Sott:
 }
 
 .cm-s-default div.CodeMirror-selected {
-    background: #b9b6b0;
+    background: #d9dfef;
 }
 
 .cm-s-default .CodeMirror-line::selection,
 .cm-s-default .CodeMirror-line>span::selection,
 .cm-s-default .CodeMirror-line>span>span::selection {
-    background: #b9b6b0;
+    background: #d9dfef;
 }
 
 .cm-s-default .CodeMirror-line::-moz-selection,
 .cm-s-default .CodeMirror-line>span::-moz-selection,
 .cm-s-default .CodeMirror-line>span>span::-moz-selection {
-    background: #b9b6b0;
+    background: #d9dfef;
 }
 
 .cm-s-default .CodeMirror-gutters {
