--- a/assets/treeview.css
+++ b/assets/treeview.css
@@ -15,11 +15,11 @@ jltree {
 
 jltree::before {
     display: inline-block;
-    content: " ";
-    background-size: 1em 1em;
+    content: "";
+    background-size: 100%;
     height: 1em;
     width: 1em;
-    background-position-y: .2em;
+    margin-bottom: -.1em;
     opacity: .5;
     cursor: pointer;
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/caret-down-outline.svg);
