Fixed original layout style

--- a/assets/editor.css
+++ b/assets/editor.css
@@ -88,7 +88,7 @@ celloutput h1 {
 
 celloutput h2 {
     font-size: 1.8rem;
-    border-bottom: 2px solid rgba(0, 0, 0, .15);
+    border-bottom: 2px dotted rgba(0, 0, 0, .15);
     margin-bottom: .5rem;
 }
 
