--- a/assets/editor.css
+++ b/assets/editor.css
@@ -156,14 +156,12 @@ celloutput pre {
     font-family: "Roboto Mono", monospace;
 }
 
-blockquote p {
+celloutput blockquote {
     border-radius: 15px;
     padding: 15px;
-    margin: 1rem auto 1rem;
-    max-width: 48rem;
+    margin: 1rem 1rem;
     background-color: #fafafa;
     color: #555;
-    height: auto;
 }
 
 /* HEADER */
