Added CSS formatting for quotes and blockquotes (#140)
* Added CSS formatting for quotes and blockquotes

* Fixed original layout style

* CSS tweaks

Co-authored-by: Fons van der Plas <fonsvdplas@gmail.com>

--- a/assets/editor.css
+++ b/assets/editor.css
@@ -156,6 +156,13 @@ celloutput pre {
     font-family: "Roboto Mono", monospace;
 }
 
+celloutput blockquote {
+    border-radius: 15px;
+    padding: 15px;
+    margin: 1rem 1rem;
+    background-color: #fafafa;
+    color: #555;
+}
 
 /* HEADER */
 
