Added formatting to create nice error page

--- a/assets/welcome.css
+++ b/assets/welcome.css
@@ -40,6 +40,15 @@ body.statistics #title {
     margin-left: .1em;
 }
 
+#title img#error-img {
+    height: 250px;
+    width: 250px;
+}
+
+#title #emoji {
+    font-style: normal;
+}
+
 body {
     margin: 0px;
     position: absolute;
