--- a/frontend/treeview.css
+++ b/frontend/treeview.css
@@ -18,11 +18,12 @@ jltree * {
 
 jltree::before {
     display: inline-block;
+    position: relative;
     content: "";
     background-size: 100%;
     height: 1em;
     width: 1em;
-    margin-bottom: -0.1em;
+    bottom: -2px;
     opacity: 0.5;
     cursor: pointer;
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/caret-down-outline.svg);
